--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lifeform-searcher-react",
-  "version": "0.1.0",
+  "version": "1.0.0-0",
   "private": true,
   "dependencies": {
     "pixi.js": "^4.8.1",
