--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0-0",
   "private": true,
   "dependencies": {
+    "clamp": "^1.0.1",
     "pixi.js": "^4.8.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
