--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "clamp": "^1.0.1",
+    "d3-format": "^1.3.2",
     "pixi.js": "^4.8.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
