--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "clamp": "^1.0.1",
     "d3-format": "^1.3.2",
+    "pixi-filters": "^2.6.1",
     "pixi.js": "^4.8.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
