--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "lifeform-searcher-react",
+  "name": "lifeform-searcher",
   "version": "1.0.0-0",
   "private": true,
+  "homepage": "https://ironchestgames.github.io/lifeform-searcher",
   "dependencies": {
     "clamp": "^1.0.1",
     "d3-format": "^1.3.2",
@@ -13,9 +14,14 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
