added redux for game model handling

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-pixi-fiber": "^0.4.9",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
