--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "redux": "^4.0.0"
   },
   "scripts": {
+    "export:version-js": "ver=`node -pe \"require('./package.json').version\"` && echo \"module.exports = \\\"$ver\"\\\" > src/version.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run export:version-js && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
