--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "lifeform-searcher",
   "version": "1.0.0-1",
   "private": true,
-  "homepage": "https://ironchestgames.github.io/lifeform-searcher",
   "dependencies": {
+    "ajv": "^6.5.4",
+    "animated": "^0.2.2",
     "clamp": "^1.0.1",
     "d3-format": "^1.3.2",
     "pixi-filters": "^2.6.1",
